# modulinos

./: .gitignore  .gitmodules  Gemfile  Makefile  README  README.md  Rakefile  ScriptedMain.groovy  ScriptedMain.io  ScriptedMain.java  ScriptedMain.scala  Test.java  Test.scala  meaningoflife.m  package.json  package.xml  scriptedmain.R  scriptedmain.c  scriptedmain.clj  scriptedmain.cpp  scriptedmain.d  scriptedmain.el  scriptedmain.erl  scriptedmain.hs  scriptedmain.j  scriptedmain.js  scriptedmain.lisp  scriptedmain.ll  scriptedmain.lsp  scriptedmain.lua  scriptedmain.m  scriptedmain.ma  scriptedmain.ml  scriptedmain.php  scriptedmain.pl  scriptedmain.pm  scriptedmain.py  scriptedmain.rb  scriptedmain.scm  scriptedmain.sh  (+27 more)
R/: README.md  modulino.R  scriptedmain.R  test.R
ash/: Guardfile  README.md
bash/: Makefile  README.md  scriptedmain.sh  test.sh
bmake/: README.md  test.mk
c/: CMakeLists.txt  Guardfile  Guardfile-lint  Makefile  README.md  modulino.c  modulino.h  scriptedmain.c  scriptedmain.h  test.c
c/lib/: modulino.c  modulino.h  test.c
chicken/: Makefile  README.md  scriptedmain.scm  test.scm
cl/: README.md  modulino.lisp  scriptedmain.lisp  test.lisp
clojure/: .gitignore  README.md  modulino.clj  scriptedmain.clj  test.clj
coffeescript/: Gruntfile.js  README.md  modulino.coffee  package.json  test.coffee
cpp/: .gitignore  Guardfile  Guardfile-lint  Makefile  README.md  modulino.cpp  modulino.h  modulino.hh  scriptedmain.cpp  scriptedmain.h  test.cpp
d/: Makefile  README.md  modulino.d  scriptedmain.d  test.d
dart/: modulino.dart  scriptedmain.dart  test.dart
dash/: README.md
elisp/: README.md  test.el
emacslisp/: scriptedmain.el
erlang/: Makefile  README.md  modulino.erl  scriptedmain.erl  test.erl
factor/: modulino.factor  scriptedmain.factor  test.factor
fish/: README.md  package.json
fsharp/: Makefile  Modulino.fs  README.md  ScriptedMain.fs  Test.fs  scriptedmain.fsx  test.fsx
gmake/: README.md
gnusmalltalk/: modulino.st  package.xml  scriptedmain.st  test.st
go/: Makefile  README.md  modulino.go  scriptedmain.go  test.go
groovy/: Makefile  README.md  ScriptedMain.groovy  Test.groovy  build.gradle  pom.xml
haskell/: .gitignore  Makefile  Modulino.hs  README.md  Shakefile.hs  Test.hs  modulinos.cabal  scriptedmain.hs  test.hs
haskell/src/: Modulino.hs  Test.hs
io/: Modulino.io  README.md  ScriptedMain.io  test.io
j/: modulino.j  scriptedmain.j  test.j
java/: .gitignore  README.md  ScriptedMain.java  Test.java  build.gradle  pom.xml
jvm/: README.md  sample.envrc
ksh/: README.md
llvm/: Makefile  README.md  modulino.ll  scriptedmain.ll  test.ll
lua/: README.md  modulino.lua  scriptedmain.lua  test.lua
make/: README.md  meaning-of-life.mk  modulino.mk  test.mf  test.mk
mathematica/: modulino.ma  scriptedmain.ma  test.ma
matlab-octave/: meaningoflife.m  test-meaningoflife.m
newlisp/: modulino.lsp  test.lsp
node/: Gruntfile.js  README.md  modulino.js  package.json  scriptedmain.js  test.js
objc/: Makefile  Modulino.h  Modulino.m  README.md  ScriptedMain.h  ScriptedMain.m  Test.m  scriptedmain.h  scriptedmain.m  test.m
ocaml/: .gitignore  Makefile  README.md  modulino.ml  scriptedmain.ml  test.ml
oz/: .gitignore  Makefile  modulino.oz  scriptedmain.oz  test.oz
pascal/: .gitignore  Makefile  modulino.pas  scriptedmain.p  scriptedmain.pas  test.pas
perl/: Makefile  Modulino.pm  README.md  ScriptedMain.pm  scriptedmain.pm  test.pl
perl6/: Modulino.pm  README.md  ScriptedMain.pm  test.pl
php/: Makefile  README.md  modulino.php  scriptedmain.php  test.php
python/: README.md  modulino.py  requirements-dev.txt  requirements.txt  scriptedmain.py  tasks.py  test.py
racket/: README.md  scriptedmain.rkt  test.rkt
ruby/: .rubocop.yml  Gemfile  Guardfile  Guardfile-cucumber  README.md  Rakefile  modulino.rb  scriptedmain.rb  test.rb
rust/: .gitignore  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  modulino.rs  rick.rs  scriptedmain.rs  test.rs  tinyrick.rs
rust/src/: lib.rs
sac/: Makefile  Modulino.sac  ScriptedMain.sac  scriptedmain.sac  test.sac
scala/: Makefile  Modulino.scala  ScriptedMain.scala  Test.scala
sh/: Makefile  README.md
swift/: .gitignore  Makefile  Modulino.swift  Package.swift  README.md  ScriptedMain.swift  ScriptedMain.swiftdoc  ScriptedMain.swiftmodule  Test.swift
tcsh/: Makefile  README.md
ts/: test.ts  (+4 more)
(+100 files in other folders)
