name:           modulinos
version:        0.0.1
category:       Tutorial
synopsis:       Modulinos in Haskell
description:    A fully qualified example of Haskell modulinos
license:        BSD3
license-file:   LICENSE.md
author:         Andrew Pennebaker
maintainer:     andrew.pennebaker@gmail.com
build-type:     Simple
cabal-version:  >=1.8

source-repository head
  type:     git
  location: git://github.com/mcandre/modulinos.git

library
  build-depends:
    base >= 4.3.1.0 && < 5

  exposed-modules: Modulino

  ghc-options: -Wall -fwarn-tabs
  hs-source-dirs: src

executable modulino-test
  build-depends:
    base >= 4.3.1.0 && < 5

  other-modules: Modulino

  main-is: Test.hs
  hs-source-dirs: src
  ghc-options: -Wall -fwarn-tabs

test-suite reference
  build-depends:
    base                        >= 4.3.1.0 && < 5,
    hlint                       >= 2.1.10 && < 3,
    shake                       >= 0.16.4 && < 0.17

  ghc-options:        -Wall -fwarn-tabs
  hs-source-dirs:     src
  main-is:            Test.hs
  type:               exitcode-stdio-1.0
