[package]

name = "modulinos"
version = "0.0.1"
authors = ["Andrew Pennebaker <andrew.pennebaker@gmail.com>"]

[dependencies]
tinyrick = { version = "0.0.9", optional = true }
tinyrick_extras = { version = "0.0.3", optional = true }

[features]
letmeout = ["tinyrick", "tinyrick_extras"]

[lib]
name = "modulino"

[[bin]]
name = "modulino"
path = "src/bin/modulino.rs"

[[bin]]
name = "modulino-test"
path = "src/bin/modulino-test.rs"

[[bin]]
name = "tinyrick"
path = "tinyrick.rs"
required-features = ["letmeout"]
